--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 .App {
-  text-align: center;
-  height:100%;
+  display: flex;
   flex-direction: column;
-  padding:5px;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
 }
 
 .ticker{
