--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,11 @@ body {
   background-color: black;
 }
 .title{
-  color: #f8c1a3
+  color: #f8c1a3;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 code {
@@ -31,13 +35,21 @@ code {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  width: 50%;
+  height: 50%;
+  border: 10px solid #f8c1a3;
+  border-radius: 10px;
+  margin: auto;
 }
+
 
 .login__title {
   font-size: 36px;
   margin-bottom: 20px;
   color: #f8c1a3;
+  display:flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .login__form {
@@ -73,13 +85,22 @@ border-radius: 5px;
 font-size: 16px;
 cursor: pointer;
 margin-top: 15px;
+margin-bottom: 10px;
 }
 
-.login__logo{
-height:100px;
-width:100px;
-padding:0;
-}
+.login__logo {
+  height: 75px;
+  width: 75px;
+  margin-right: 20px;
+  }
+
+  .search__logo {
+    height: 100px;
+    width: 100px;
+    padding: 0;
+    align-items: center;
+    margin-right: 20px;
+    }
 
 .search__field{
 padding: 10px 20px;
@@ -168,5 +189,5 @@ a:first-of-type {
 }
 
 .stock__emoji{
-  height:40px;
+  height:30px;
 }
